feat(invoice-e2e): finalizadas pruebas E2E completas de facturación a través del API Gateway interactuando con BBDD externa.