@@ -1,8 +1,8 @@
 package com.billMate.billing.exception;
 
+import com.billMate.billing.model.ApiError;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.ConstraintViolationException;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -10,7 +10,7 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.util.Collections;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,26 +19,31 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(EntityNotFoundException.class)
     public ResponseEntity<ApiError> handleEntityNotFound(EntityNotFoundException ex) {
-        ApiError apiError = ApiError.of(
-                HttpStatus.NOT_FOUND,
-                ErrorMessages.CLIENT_NOT_FOUND,
-                Collections.singletonList(ex.getMessage())
-        );
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(apiError);
+        ApiError error = new ApiError()
+                .status(HttpStatus.NOT_FOUND.name())
+                .code(HttpStatus.NOT_FOUND.value())
+                .message(ErrorMessages.RESOURCE_NOT_FOUND)
+                .errors(List.of(ex.getMessage()))
+                .timestamp(OffsetDateTime.now());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
     }
+
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ApiError> handleValidation(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult().getFieldErrors().stream()
-                .map(field -> field.getField() + ": " + field.getDefaultMessage())
-                .collect(Collectors.toList());
+        List<String> validationErrors = ex.getBindingResult().getFieldErrors().stream()
+                .map(fieldError -> fieldError.getField() + ": " + fieldError.getDefaultMessage())
+                .toList();
 
-        ApiError apiError = ApiError.of(
-                HttpStatus.BAD_REQUEST,
-                ErrorMessages.VALIDATION_FAILED,
-                errors
-        );
-        return new ResponseEntity<>(apiError, new HttpHeaders(), HttpStatus.BAD_REQUEST);
+        ApiError error = new ApiError()
+                .status(HttpStatus.BAD_REQUEST.name())
+                .code(HttpStatus.BAD_REQUEST.value())
+                .message("La solicitud contiene errores de validación.")
+                .errors(validationErrors)
+                .timestamp(OffsetDateTime.now());
+
+        return ResponseEntity.badRequest().body(error);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
@@ -47,33 +52,42 @@ public class GlobalExceptionHandler {
                 .map(v -> v.getPropertyPath() + ": " + v.getMessage())
                 .collect(Collectors.toList());
 
-        ApiError apiError = ApiError.of(
-                HttpStatus.BAD_REQUEST,
-                ErrorMessages.CONSTRAINT_VIOLATION,
-                errors
-        );
+        ApiError apiError = new ApiError()
+                .status(HttpStatus.BAD_REQUEST.name())
+                .code(HttpStatus.BAD_REQUEST.value())
+                .message(ErrorMessages.CONSTRAINT_VIOLATION)
+                .errors(errors)
+                .timestamp(OffsetDateTime.now());
+
         return ResponseEntity.badRequest().body(apiError);
     }
+
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ApiError> handleUnexpected(Exception ex) {
-        ApiError apiError = ApiError.of(
-                HttpStatus.INTERNAL_SERVER_ERROR,
-                ErrorMessages.UNEXPECTED_ERROR,
-                Collections.singletonList(ex.getMessage())
-        );
+        ApiError apiError = new ApiError()
+                .status(HttpStatus.INTERNAL_SERVER_ERROR.name())
+                .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
+                .message(ErrorMessages.UNEXPECTED_ERROR)
+                .errors(List.of(ex.getMessage()))
+                .timestamp(OffsetDateTime.now());
+
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(apiError);
     }
 
+
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<ApiError> handleInvalidJson(HttpMessageNotReadableException ex) {
-        ApiError apiError = ApiError.of(
-                HttpStatus.BAD_REQUEST,
-                ErrorMessages.INVALID_JSON,
-                List.of("Formato JSON inválido o mal formado")
-        );
+        ApiError apiError = new ApiError()
+                .status(HttpStatus.BAD_REQUEST.name())
+                .code(HttpStatus.BAD_REQUEST.value())
+                .message(ErrorMessages.INVALID_JSON)
+                .errors(List.of("Formato JSON inválido o mal formado"))
+                .timestamp(OffsetDateTime.now());
+
         return ResponseEntity.badRequest().body(apiError);
     }
+
 
 
 }
